fixed the problem of not counting empty spaces, fixed css for not showing empty spaces in tweet box

--- a/public/styles/tweet-box.css
+++ b/public/styles/tweet-box.css
@@ -32,6 +32,7 @@ main .userHandle {
 }
 
 main .tweetContent {
+  white-space: pre-wrap;
   overflow-wrap: break-word;
   padding-bottom: 30px;
   font-weight: 600;
